[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bg-text-normalizer"
version = "1.1.0"
description = "Bulgarian text normalization for TTS — converts numbers, dates, currency, abbreviations to spoken form"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Radi Totev"},
]
keywords = ["bulgarian", "tts", "text-normalization", "nlp", "speech-synthesis", "bulgarian-language"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Bulgarian",
]

[project.urls]
Homepage = "https://github.com/raditotev/bg-text-normalizer"
Repository = "https://github.com/raditotev/bg-text-normalizer"
Issues = "https://github.com/raditotev/bg-text-normalizer/issues"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]
